--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-	"name": "Lazack-advanced",
+	"name": "Malik-advanced",
 	"description": "WhatsApp Bot Using Lib Baileys",
-	"repository": "https://github.com/Lazack28/Lazack-advanced",
+	"repository": "https://github.com/fortermuu/Lazack-advanced",
 	"logo": "https://node-js-sample.herokuapp.com/node.png",
 	"keywords": ["multi-device"]
 	},
